--- a/index.html
+++ b/index.html
@@ -9,90 +9,363 @@
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/font-awesome.css">
-  <link rel="stylesheet" href="assets/css/font-family.css">
+  <link rel="stylesheet" href="assets/css/fonts.css">
   <link rel="stylesheet" href="assets/css/responsive.css">
   <link rel="stylesheet" href="assets/css/common.css">
+  <link rel="icon" type="image" href="assets/images/favicon.png">
+
+
 </head>
 
 <body>
-<!-- header -->
-<header class="bg-light">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-12">
-        <nav class="navbar navbar-expand-lg ">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="assets/images/logo.png" alt=""></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">About us</a>
-                </li>
-      
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Services
-                  </a>
-                  <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#">Something else here</a></li>
-                  </ul>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link">Blogs</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link">Contact us</a>
-                </li>
+  <!-- header -->
+  <header class=" sticky-top bg-white">
+    <div class="container-xl">
+      <nav class="navbar navbar-expand-lg ">
+        <a class="navbar-brand" href="#"><img class="img-fluid" src="assets/images/logo.png" alt=""></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About us</a>
+            </li>
+
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Services
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
                 <li>
-                  <a href="">
-                    <button type="button" class="btn">get free proposal</button>
-                  </a>
+                  <hr class="dropdown-divider">
                 </li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
               </ul>
-              
+            </li>
+            <li class="nav-item">
+              <a class="nav-link">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link">Blogs</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link">Contact us</a>
+            </li>
+            <li>
+              <a href="">
+                <button type="button" class="btn">get free proposal</button>
+              </a>
+            </li>
+          </ul>
+
+        </div>
+
+      </nav>
+    </div>
+  </header>
+  <!-- banner -->
+  <section class="banner">
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+       <div class="carousel-inner">
+             <div class="container-xl">
+                <div class="row">
+                   <div class="col-md-12 col-lg-5">
+                      <div class=" text-white pt-5">
+                          <strong>Digital Marketing</strong>
+                          <h1>Build Your Brand with Leading Digital Marketing Agency</h1>
+                          <p>Edifying Voyages is a creative digital marketing company that supports brands' glitter while transforming the businesses digitally for new growth opportunities.</p>
+                          <button type="button" class="btn btn-outline-light text-capitalize px-4">start now</button>
+                      </div>
+                  </div>
+                   <div class="col-md-7 col-lg-6">
+                      <div class="about-us-img">
+                         <img src="assets/images/banner.png" alt="about us" class="img-fluid about-single-img">
+                      </div>
+                   </div>
+                </div>
+
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                   <span class="sr-only">Previous</span>
+                 </a>
+                 <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                   <span class="sr-only">Next</span>
+                 </a>
+             </div>
+       <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+         <span class="sr-only">Previous</span>
+       </a>
+       <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+         <span class="carousel-control-next-icon" aria-hidden="true"></span>
+         <span class="sr-only">Next</span>
+       </a>
+     </div>
+    </section>
+
+  <!-- cards -->
+
+  <section class="card-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 col-lg-4 col-sm-6 col-xs-6">
+          <div class="card shadow-lg" style="width: 22rem;">
+            <div class="card-image">
+              <img src="assets/images/growth.png" class="card-img-top w-50 " alt="...">
+            </div>
+
+            <div class="card-body">
+              <h5 class="card-title">guaranted growth</h5>
+              <p class="card-text">Helping buisneses to grow with our years of experiences that convert them more
+                customers.</p>
+
             </div>
           </div>
-        </nav>
+        </div>
+        <div class="col-md-4 col-lg-4 col-sm-6 col-xs-6">
+          <div class="card shadow-lg" style="width: 22rem;">
+            <div class="card-image">
+              <img src="assets/images/dedicated-team.png" class="card-img-top w-50 " alt="...">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">dedicated team</h5>
+              <p class="card-text">dedicated team to plan and develop the roadmap to delivery best outcomes</p>
+
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 col-lg-4 col-sm-6 col-xs-6">
+          <div class="card shadow-lg" style="width: 22rem;">
+            <div class="card-image">
+              <img src="assets/images/brand-building.png" class="card-img-top w-50 " alt="...">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">brand building</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</header>
- <!-- banner -->
- <section class="banner">
-  <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="assets/images/banner.png" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="assets/images/banner.png" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="assets/images/banner.png" class="d-block w-100" alt="...">
+  </section>
+
+  <!-- second banner -->
+  <section class="second-banner">
+    <img src="assets/images/sales-banner.webp" alt="">
+    <div class="centered ">
+      <h2>want more sales? </h2>
+      <p> <i>get your <u>free proposal</u> on how we can help you with that!</i>
+      </p>
+      <div class="second-banner-button">
+        <button type="button" class="btn btn-outline-light text-capitalize">get started now <span><i
+              class="fa-solid fa-angles-right"></i></span></button>
       </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <i class="fa-solid fa-arrow-left"></i>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
+  </section>
+
+  <!-- Contact section -->
+
+  <section class="contact-form">
+    <div class="container">
+      <div class="row">
+        <div class="col-6">
+          <div class="form-data px-5">
+            <div class="row">
+              <div class="col-sm-12">
+                <div class="heading mb-3 mt-5">
+                  <h4 class="text-capitalize">ready to get started?</h4>
+                </div>
+              </div>
+              <form action="">
+                <div class="row">
+                  <div class="col-sm-12">
+                    <div class="contact-form">
+                      <input type="text" class="form-control  " id="exampleFormControlInput1" placeholder="Enter name">
+                    </div>
+                  </div>
+                  <div class="col-sm-12">
+                    <div class="contact-form">
+                      <input type="email" class="form-control  " id="exampleFormControlInput1"
+                        placeholder="Enter Email">
+                    </div>
+
+                  </div>
+                  <div class="col-sm-12">
+                    <div class="contact-form">
+                      <input type="number" class="form-control " id="exampleFormControlInput1"
+                        placeholder="Enter Phone No">
+
+                    </div>
+
+                  </div>
+                  <div class="col-sm-12">
+                    <div class="contact-form">
+                      <select class="form-select form-select-lg" aria-label="Default select example">
+                        <option selected>Choose services</option>
+                        <option value="1">One</option>
+                        <option value="2">Two</option>
+                        <option value="3">Three</option>
+                      </select>
+                    </div>
+
+                  </div>
+                  <div class="col-sm-12">
+                    <div class="contact-form">
+                      <input type="text" class="form-control " id="exampleFormControlInput1"
+                        placeholder="How did you find us?">
+                    </div>
+
+                  </div>
+
+                  <div class="col-sm-12">
+                    <div class="contact-form">
+                      <div class="form-floating">
+                        <textarea class="form-control " placeholder="Leave a comment here" id="floatingTextarea2"
+                          style="height: 60px"></textarea>
+                        <label for="floatingTextarea2">Message</label>
+                      </div>
+                    </div>
+
+                  </div>
+
+                  <div class="col-sm-12 mb-5">
+                    <button type="button" class="btn btn-primary text-capitalize px-4">send message</button>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+        <div class="col-6 px-4">
+          <div class="contact-address">
+            <h2>build brand digital with us!</h2>
+            <p>ready to build brand and grow your buisness with us? fill the form with relevant information and we will
+              get back to you soon with our plan.</p>
+            <div class="row">
+              <div class="col-sm-12">
+                <div class="list-block">
+                  <h5 class="list-heading text-capitalize">contact us</h5>
+                  <ul>
+                    <li><a href=""><span><i class="fa-solid fa-phone"></i></span>+91-708-708-7356</a> </li>
+                    <li><a href=""><span><i class="fa-solid fa-envelope"></i></span>info@edifyingvoyages.com</a></li>
+                  </ul>
+                </div>
+              </div>
+              <div class="col-sm-12">
+                <div class="list-block">
+                  <h5 class="list-heading">for hr and other enquiries:</h5>
+                  <ul>
+                    <li><a href=""><span><i class="fa-solid fa-phone"></i></span>+91-987-726-7234 </a></li>
+                    <li><a href=""><span><i class="fa-solid fa-envelope"></i></span>info@edifyingvoyages.com</a></li>
+                  </ul>
+                </div>
+
+              </div>
+              <div class="col-sm-12">
+                <div class="last-list-block">
+                  <h5 class="list-heading">more option to reach us:</h5>
+                  <ul>
+                    <li><a href="">Get in Touch<span><i class="fa-solid fa-angles-right"></i></span></a></li>
+                    <li><a href="">Get a Quote<span><i class="fa-solid fa-angles-right"></i></span></a></li>
+                    <li><a href="">Request a Proposal<span><i class="fa-solid fa-angles-right"></i></span></a></li>
+                  </ul>
+                </div>
+
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+  </section>
+
+  <!-- footer -->
+
+  <footer class="py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <p class="text-white pe-5">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+            Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
+            galley of type and scrambled it to make a type specimen</p>
+          <div class="icon-list">
+            <ul class="m-0 p-0">
+              <li><a href=""><i class="fa-brands fa-facebook-f"></i></a></li>
+              <li><a href=""><i class="fa-brands fa-twitter"></i></a></li>
+              <li><a href=""><i class="fa-brands fa-linkedin-in"></i></a></li>
+              <li><a href=""><i class="fa-brands fa-youtube"></i></a></li>
+              <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="footer-heading">
+            <h6 class="text-uppercase text-white">services</h6>
+          </div>
+          <div class="middle-list">
+            <ul class="m-0 p-0">
+              <li><a href="">seo</a></li>
+              <li><a href="">ppc</a></li>
+              <li><a href="">social media</a></li>
+              <li><a href="">graphic design</a></li>
+            </ul>
+          </div>
+
+        </div>
+        <div class="col-md-4">
+          <div class="footer-heading">
+            <h6 class="text-uppercase text-white">get in touch</h6>
+          </div>
+          <div class="last-list">
+            <ul class="m-0 p-0">
+              <li><a href=""> <span><i class="fa-solid fa-envelope"></i></span> 3181 Sector 37-D,Chandigarh, 160036
+                </a></li>
+              <li><a href=""><span><i class="fa-solid fa-location-dot"></i></span>info@edifyingvoyages.com </a></li>
+              <li><a href=""><span><i class="fa-solid fa-phone"></i></span>+91-708-708-7356 </a></li>
+            </ul>
+          </div>
+
+        </div>
+
+      </div>
+    </div>
+
+  </footer>
+  <div class="footer-bottom p-3">
+    <div class="container">
+      <div class="row">
+        <div class="col-8">
+          <p class="text-white m-0">copyright<i class="fa-regular fa-copyright"></i>2022. All rights reserved by
+            <span>edifying voyages</span></p>
+        </div>
+        <div class="col-4">
+          <div class="bottom-list">
+            <ul class="m-0 p-0 text-end">
+              <li>privacy policy</li>
+              <li>terms & conditons</li>
+            </ul>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+
   </div>
- </section>
+
+
+
 
   <script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
