--- a/index.html
+++ b/index.html
@@ -44,10 +44,7 @@
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Action</a></li>
                 <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
+
               </ul>
             </li>
             <li class="nav-item">
@@ -74,87 +71,98 @@
   <!-- banner -->
   <section class="banner">
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-       <div class="carousel-inner">
-             <div class="container-xl">
-                <div class="row">
-                   <div class="col-md-12 col-lg-5">
-                      <div class=" text-white pt-5">
-                          <strong>Digital Marketing</strong>
-                          <h1>Build Your Brand with Leading Digital Marketing Agency</h1>
-                          <p>Edifying Voyages is a creative digital marketing company that supports brands' glitter while transforming the businesses digitally for new growth opportunities.</p>
-                          <button type="button" class="btn btn-outline-light text-capitalize px-4">start now</button>
-                      </div>
-                  </div>
-                   <div class="col-md-7 col-lg-6">
-                      <div class="about-us-img">
-                         <img src="assets/images/banner.png" alt="about us" class="img-fluid about-single-img">
-                      </div>
-                   </div>
-                </div>
+      <div class="carousel-inner">
+        <div class="container-xl">
+          <div class="row">
+            <div class="col-md-12 col-sm-6 col-lg-6">
+              <div class="pt-5">
+                <strong class="text-white">Digital Marketing</strong>
+                <h1 class="text-white">Build Your Brand with Leading Digital Marketing Agency</h1>
+                <p class="text-white">Edifying Voyages is a creative digital marketing company that supports brands'
+                  glitter while transforming the businesses digitally for new growth opportunities.</p>
+                <button type="button" class="btn btn-outline-light text-capitalize px-4">start now</button>
+              </div>
+            </div>
+            <div class="col-md-12 col-sm-6 col-lg-6">
+              <div class="banner-image">
+                <img src="assets/images/banner.png" alt="about us" class="img-fluid about-single-img">
+              </div>
+            </div>
+          </div>
 
-                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                   <span class="sr-only">Previous</span>
-                 </a>
-                 <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                   <span class="sr-only">Next</span>
-                 </a>
-             </div>
-       <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-         <span class="sr-only">Previous</span>
-       </a>
-       <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-         <span class="carousel-control-next-icon" aria-hidden="true"></span>
-         <span class="sr-only">Next</span>
-       </a>
-     </div>
-    </section>
+          <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+  </section>
 
   <!-- cards -->
 
   <section class="card-section">
     <div class="container">
       <div class="row">
-        <div class="col-md-4 col-lg-4 col-sm-6 col-xs-6">
-          <div class="card shadow-lg" style="width: 22rem;">
-            <div class="card-image">
-              <img src="assets/images/growth.png" class="card-img-top w-50 " alt="...">
-            </div>
+        <div class="col-sm-6 mt-sm-3 col-md-4">
+          <div class="card-group">
+            <div class="card shadow-lg" style="width: 22rem;">
+              <div class="card-image">
+                <img src="assets/images/growth.png" class="card-img-top w-50 " alt="...">
+              </div>
 
-            <div class="card-body">
-              <h5 class="card-title">guaranted growth</h5>
-              <p class="card-text">Helping buisneses to grow with our years of experiences that convert them more
-                customers.</p>
+              <div class="card-body">
+                <h5 class="card-title">guaranted growth</h5>
+                <p class="card-text">Helping buisneses to grow with our years of experiences that convert them more
+                  customers.</p>
 
+              </div>
             </div>
           </div>
+
         </div>
-        <div class="col-md-4 col-lg-4 col-sm-6 col-xs-6">
-          <div class="card shadow-lg" style="width: 22rem;">
-            <div class="card-image">
-              <img src="assets/images/dedicated-team.png" class="card-img-top w-50 " alt="...">
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">dedicated team</h5>
-              <p class="card-text">dedicated team to plan and develop the roadmap to delivery best outcomes</p>
+        <div class="col-sm-6 mt-sm-3 col-md-4">
+          <div class="card-group">
+            <div class="card shadow-lg" style="width: 22rem;">
+              <div class="card-image">
+                <img src="assets/images/dedicated-team.png" class="card-img-top w-50 " alt="...">
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">dedicated team</h5>
+                <p class="card-text">dedicated team to plan and develop the roadmap to delivery best outcomes</p>
 
+              </div>
             </div>
           </div>
+
         </div>
-        <div class="col-md-4 col-lg-4 col-sm-6 col-xs-6">
-          <div class="card shadow-lg" style="width: 22rem;">
-            <div class="card-image">
-              <img src="assets/images/brand-building.png" class="card-img-top w-50 " alt="...">
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">brand building</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+        <div class="col-sm-6 mt-sm-3 col-md-4">
+          <div class="card-group">
+            <div class="card shadow-lg" style="width: 22rem;">
+              <div class="card-image">
+                <img src="assets/images/brand-building.png" class="card-img-top w-50 " alt="...">
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">brand building</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                  card's
+                  content.</p>
 
+              </div>
             </div>
           </div>
+
         </div>
       </div>
     </div>
@@ -179,7 +187,7 @@
   <section class="contact-form">
     <div class="container">
       <div class="row">
-        <div class="col-6">
+        <div class="col-md-6">
           <div class="form-data px-5">
             <div class="row">
               <div class="col-sm-12">
@@ -247,7 +255,7 @@
             </div>
           </div>
         </div>
-        <div class="col-6 px-4">
+        <div class="col-md-6 px-4">
           <div class="contact-address">
             <h2>build brand digital with us!</h2>
             <p>ready to build brand and grow your buisness with us? fill the form with relevant information and we will
@@ -347,7 +355,8 @@
       <div class="row">
         <div class="col-8">
           <p class="text-white m-0">copyright<i class="fa-regular fa-copyright"></i>2022. All rights reserved by
-            <span>edifying voyages</span></p>
+            <span>edifying voyages</span>
+          </p>
         </div>
         <div class="col-4">
           <div class="bottom-list">
