--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                   <h5 class="list-heading text-capitalize">contact us</h5>
                   <ul>
                     <li><a href=""><span><i class="fa-solid fa-phone"></i></span>+91-708-708-7356</a> </li>
-                    <li><a href=""><span><i class="fa-solid fa-envelope"></i></span>info@edifyingvoyages.com</a></li>
+                    <li><a href="mailto: info@edifyingvoyages.com"><span><i class="fa-solid fa-envelope"></i></span>info@edifyingvoyages.com</a></li>
                   </ul>
                 </div>
               </div>
@@ -275,7 +275,7 @@
                   <h5 class="list-heading">for hr and other enquiries:</h5>
                   <ul>
                     <li><a href=""><span><i class="fa-solid fa-phone"></i></span>+91-987-726-7234 </a></li>
-                    <li><a href=""><span><i class="fa-solid fa-envelope"></i></span>info@edifyingvoyages.com</a></li>
+                    <li><a href="mailto: info@edifyingvoyages.com"><span><i class="fa-solid fa-envelope"></i></span>info@edifyingvoyages.com</a></li>
                   </ul>
                 </div>
 
@@ -309,11 +309,11 @@
             galley of type and scrambled it to make a type specimen</p>
           <div class="icon-list">
             <ul class="m-0 p-0">
-              <li><a href=""><i class="fa-brands fa-facebook-f"></i></a></li>
-              <li><a href=""><i class="fa-brands fa-twitter"></i></a></li>
-              <li><a href=""><i class="fa-brands fa-linkedin-in"></i></a></li>
-              <li><a href=""><i class="fa-brands fa-youtube"></i></a></li>
-              <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+              <li><a href="https://www.facebook.com/Ditstek"><i class="fa-brands fa-facebook-f"></i></a></li>
+              <li><a href="https://twitter.com/DitsTek"><i class="fa-brands fa-twitter"></i></a></li>
+              <li><a href="https://www.linkedin.com/company/ditstek-innovations"><i class="fa-brands fa-linkedin-in"></i></a></li>
+              <li><a href="https://www.youtube.com/c/ditstek"><i class="fa-brands fa-youtube"></i></a></li>
+              <li><a href="https://www.instagram.com/ditstek_innovations/"><i class="fa-brands fa-instagram"></i></a></li>
             </ul>
           </div>
         </div>
@@ -337,9 +337,9 @@
           </div>
           <div class="last-list">
             <ul class="m-0 p-0">
-              <li><a href=""> <span><i class="fa-solid fa-envelope"></i></span> 3181 Sector 37-D,Chandigarh, 160036
+              <li><a href="ditstek.com">  <span><i class="fa-solid fa-location-dot"></i></span>3181 Sector 37-D,Chandigarh, 160036
                 </a></li>
-              <li><a href=""><span><i class="fa-solid fa-location-dot"></i></span>info@edifyingvoyages.com </a></li>
+              <li><a href="mailto: info@edifyingvoyages.com"><span><i class="fa-solid fa-envelope"></i></span>info@edifyingvoyages.com </a></li>
               <li><a href=""><span><i class="fa-solid fa-phone"></i></span>+91-708-708-7356 </a></li>
             </ul>
           </div>
@@ -354,7 +354,7 @@
     <div class="container">
       <div class="row">
         <div class="col-8">
-          <p class="text-white m-0">copyright<i class="fa-regular fa-copyright"></i>2022. All rights reserved by
+          <p class="text-white m-0">copyright <i class="fa-regular fa-copyright"></i> 2022. All rights reserved by
             <span>edifying voyages</span>
           </p>
         </div>
