change properties of cards

--- a/index.html
+++ b/index.html
@@ -74,8 +74,9 @@
       <div class="carousel-inner">
         <div class="container-xl">
           <div class="row">
-            <div class="col-md-12 col-sm-6 col-lg-6">
-              <div class="pt-5">
+            <div class="banner-content">
+              <div class="col-md-6 col-sm-12 col-lg-6">
+              <div class="banner-text">
                 <strong class="text-white">Digital Marketing</strong>
                 <h1 class="text-white">Build Your Brand with Leading Digital Marketing Agency</h1>
                 <p class="text-white">Edifying Voyages is a creative digital marketing company that supports brands'
@@ -83,13 +84,14 @@
                 <button type="button" class="btn btn-outline-light text-capitalize px-4">start now</button>
               </div>
             </div>
-            <div class="col-md-12 col-sm-6 col-lg-6">
+            <div class="col-md-6 col-sm-12 col-lg-6">
               <div class="banner-image">
-                <img src="assets/images/banner.png" alt="about us" class="img-fluid about-single-img">
+                <img src="assets/images/banner.png" class="img-fluid">
               </div>
             </div>
+            </div>
+            
           </div>
-
           <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
@@ -117,15 +119,14 @@
       <div class="row">
         <div class="col-sm-6 mt-sm-3 col-md-4">
           <div class="card-group">
-            <div class="card shadow-lg" style="width: 22rem;">
+            <div class="card p-5 shadow-lg">
               <div class="card-image">
-                <img src="assets/images/growth.png" class="card-img-top w-50 " alt="...">
+                <img src="assets/images/growth.png" class="card-img-top " alt="...">
               </div>
 
               <div class="card-body">
                 <h5 class="card-title">guaranted growth</h5>
-                <p class="card-text">Helping buisneses to grow with our years of experiences that convert them more
-                  customers.</p>
+                <p class="card-text">Helping buisneses to grow with our years of experiences that convert them more.</p>
 
               </div>
             </div>
@@ -134,9 +135,9 @@
         </div>
         <div class="col-sm-6 mt-sm-3 col-md-4">
           <div class="card-group">
-            <div class="card shadow-lg" style="width: 22rem;">
+            <div class="card p-5 shadow-lg">
               <div class="card-image">
-                <img src="assets/images/dedicated-team.png" class="card-img-top w-50 " alt="...">
+                <img src="assets/images/dedicated-team.png" class="card-img-top" alt="...">
               </div>
               <div class="card-body">
                 <h5 class="card-title">dedicated team</h5>
@@ -149,9 +150,9 @@
         </div>
         <div class="col-sm-6 mt-sm-3 col-md-4">
           <div class="card-group">
-            <div class="card shadow-lg" style="width: 22rem;">
+            <div class="card p-5 shadow-lg">
               <div class="card-image">
-                <img src="assets/images/brand-building.png" class="card-img-top w-50 " alt="...">
+                <img src="assets/images/brand-building.png" class="card-img-top " alt="...">
               </div>
               <div class="card-body">
                 <h5 class="card-title">brand building</h5>
@@ -303,7 +304,7 @@
   <footer class="py-5">
     <div class="container">
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-12">
           <p class="text-white pe-5">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
             Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
             galley of type and scrambled it to make a type specimen</p>
@@ -317,7 +318,7 @@
             </ul>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-12 mt-sm-4">
           <div class="footer-heading">
             <h6 class="text-uppercase text-white">services</h6>
           </div>
@@ -331,7 +332,7 @@
           </div>
 
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-12 mt-sm-4">
           <div class="footer-heading">
             <h6 class="text-uppercase text-white">get in touch</h6>
           </div>
@@ -353,12 +354,12 @@
   <div class="footer-bottom p-3">
     <div class="container">
       <div class="row">
-        <div class="col-8">
+        <div class="col-sm-8">
           <p class="text-white m-0">copyright <i class="fa-regular fa-copyright"></i> 2022. All rights reserved by
             <span>edifying voyages</span>
           </p>
         </div>
-        <div class="col-4">
+        <div class="col-sm-4">
           <div class="bottom-list">
             <ul class="m-0 p-0 text-end">
               <li>privacy policy</li>
